--- a/backend-api/src/docs/components.yaml
+++ b/backend-api/src/docs/components.yaml
@@ -32,7 +32,8 @@ components:
           format: binary
           writeOnly: true # Used in POST/PUT/PATCH
           description: product image file
-
+    Cart: #HERE
+    
     PaginationMetadata:
       type: object
       properties: 
@@ -82,6 +83,8 @@ components:
       schema:
         type: integer
     
+    cartIdParam: #HERE
+
     limitParam:
       name: limit
       description: Number of records per page
