--- a/backend-api/src/docs/components.yaml
+++ b/backend-api/src/docs/components.yaml
@@ -21,7 +21,7 @@ components:
           type: string
           description: product description
         price:
-          type: integer
+          type: float
           description: product price
         image:
           type: string
