--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@vee-validate/zod": "^4.14.6",
     "bootstrap": "^5.3.3",
     "pinia": "^2.2.6",
+    "pinia-plugin-persistedstate": "^4.1.3",
     "vee-validate": "^4.14.6",
     "vue": "^3.5.1",
     "vue-router": "^4.4.5",
