--- a/backend-api/package.json
+++ b/backend-api/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "connect-redis": "^8.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
@@ -18,6 +19,7 @@
     "knex": "^3.1.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "redis": "^4.7.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
