--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,6 +32,8 @@ services:
       - DB_NAME=pizza
       - REDIS_HOST=redis
       - REDIS_PORT=6379
+      - SWAGGER_HOST=backend
+      - SWAGGER_PORT=3000
     depends_on:
       - mysql # wait MySQL ready first
       - redis # wait Redis ready first
