--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,56 +1,54 @@
-version: "3.9"
-
 services:
-  # FE service
+  # Frontend service
   frontend:
-    image: frontend:v1
+    image: ${FRONTEND_IMAGE}
     build:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "80:5173"
+      - "${FRONTEND_PORT}:5173"
     environment:
-      - NODE_ENV=development
-      - VITE_TARGET=http://backend:3000/
+      - NODE_ENV=${NODE_ENV}
+      - VITE_TARGET=${VITE_TARGET}
     networks:
       - app-network
 
-  # BE service
+  # Backend service
   backend:
-    image: backend:v1
+    image: ${BACKEND_IMAGE}
     build:
       context: ./backend-api
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "${BACKEND_PORT}:3000"
     environment:
-      - NODE_ENV=development
-      - DB_HOST=mysql
-      - DB_PORT=3306
-      - DB_USER=root
-      - DB_PASS=1
-      - DB_NAME=pizza
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - SWAGGER_HOST=backend
-      - SWAGGER_PORT=3000
+      - NODE_ENV=${NODE_ENV}
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
+      - DB_NAME=${DB_NAME}
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
+      - SWAGGER_HOST=${SWAGGER_HOST}
+      - SWAGGER_PORT=${SWAGGER_PORT}
     depends_on:
-      - mysql # wait MySQL ready first
-      - redis # wait Redis ready first
+      - mysql
+      - redis
     networks:
       - app-network
 
   # MySQL database service
   mysql:
-    image: mysql:8.0
+    image: mysql:${MYSQL_VERSION}
     container_name: mysql
     command: mysqld --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: 1
-      MYSQL_DATABASE: pizza
+      MYSQL_ROOT_PASSWORD: ${DB_PASS}
+      MYSQL_DATABASE: ${DB_NAME}
     ports:
-      - "3308:3306"
+      - "${MYSQL_PORT}:3306"
     volumes:
       - db_data:/var/lib/mysql
       - ./backend-api/src/database/pizza.sql:/docker-entrypoint-initdb.d/pizza.sql:ro
@@ -59,17 +57,16 @@ services:
 
   # Redis service
   redis:
-    image: redis:7.0
+    image: redis:${REDIS_VERSION}
     container_name: redis
     restart: always
     ports:
-      - "6380:6379"
+      - "${REDIS_PORT_EXTERNAL}:6379"
     networks:
       - app-network
 
 volumes:
   db_data:
-    # store the data of this MySQL service
 
 networks:
   app-network:
