--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -61,7 +61,7 @@ services:
     container_name: redis
     restart: always
     ports:
-      - "${REDIS_PORT_EXTERNAL}:6379"
+      - "${REDIS_PORT}:6379"
     networks:
       - app-network
 
