--- a/.env
+++ b/.env
@@ -1,13 +1,14 @@
 # Common
+VERSION=v1
 NODE_ENV=development
 
 # Frontend
-FRONTEND_IMAGE=frontend:v1
+FRONTEND_IMAGE=frontend
 FRONTEND_PORT_EXTERNAL=80
 VITE_TARGET=http://backend:3000/
 
 # Backend
-BACKEND_IMAGE=backend:v1
+BACKEND_IMAGE=backend
 BACKEND_PORT_EXTERNAL=3000
 DB_HOST=mysql
 DB_PORT=3306
